--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "build": "yarn run tsc && yarn run webpack",
     "start": "superstatic --port 8080 --host 127.0.0.1",
     "webpack": "webpack ./.tmp/index.js --module-bind 'js=babel-loader' --output-filename ./built/index.js"
+  },
+  "dependencies": {
+    "@types/decimal.js": "^0.0.29",
+    "decimal.js": "^6.0.0"
   }
 }
