--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "wekl-design",
+  "name": "suburi-20161231",
   "version": "1.0.0",
   "author": "OKUNOKENTARO <okunokentaro@me.com>",
+  "ava": {
+    "require": [
+      "babel-register"
+    ]
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.20.0"
+  },
   "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "superstatic": "^4.0.3",
-    "typescript": "^2.0.6",
-    "webpack": "^1.13.0"
+    "ava": "^0.17.0",
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
+    "eslint": "^3.12.2",
+    "eslint-plugin-flowtype": "^2.29.2",
+    "flow-bin": "^0.37.4",
+    "webpack": "^2.2.0-rc.3",
+    "webpack-dev-server": "^2.2.0-rc.0"
   },
   "license": "MIT",
   "main": "index.js",
-  "repository": {
-    "url": "git@github.com:armorik83/wekl-design.git",
-    "type": "git"
-  },
+  "repository": "git@github.com:armorik83/suburi-20161231.git",
   "scripts": {
-    "tsc": "tsc -p .",
-    "build": "yarn run tsc && yarn run webpack",
-    "start": "superstatic --port 8080 --host 127.0.0.1",
-    "webpack": "webpack ./.tmp/index.js --module-bind 'js=babel-loader' --output-filename ./built/index.js"
-  },
-  "dependencies": {
-    "@types/decimal.js": "^0.0.29",
-    "decimal.js": "^6.0.0"
+    "lint": "eslint src test",
+    "lint:fix": "eslint src test --fix",
+    "start": "webpack-dev-server",
+    "test": "ava",
+    "typecheck": "flow"
   }
 }
